[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/GUI/Inventory.gd" type="Script" id=1]
[ext_resource path="res://scenes/GUI/Slot.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Fjalla_One/FjallaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 10
font_data = SubResource( 1 )

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_right = -384.0
margin_bottom = -536.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.156863, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.12247
margin_bottom = 1.12247
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ColorRect/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 512.0
margin_bottom = 184.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Slot1" parent="ColorRect/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_right = 60.0
margin_bottom = 60.0

[node name="Slot2" parent="ColorRect/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0

[node name="Label" parent="ColorRect/MarginContainer/GridContainer/Slot2/TextureRect" index="0"]
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="Amount" parent="ColorRect/MarginContainer/GridContainer/Slot2/TextureRect" index="1"]
custom_fonts/font = SubResource( 2 )

[node name="Slot3" parent="ColorRect/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0

[node name="Label" parent="ColorRect/MarginContainer/GridContainer/Slot3/TextureRect" index="0"]
custom_fonts/font = SubResource( 2 )
text = "3"

[node name="Amount" parent="ColorRect/MarginContainer/GridContainer/Slot3/TextureRect" index="1"]
custom_fonts/font = SubResource( 2 )

[node name="Slot4" parent="ColorRect/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 192.0
margin_right = 252.0
margin_bottom = 60.0

[node name="Label" parent="ColorRect/MarginContainer/GridContainer/Slot4/TextureRect" index="0"]
custom_fonts/font = SubResource( 2 )
text = "4"

[node name="Amount" parent="ColorRect/MarginContainer/GridContainer/Slot4/TextureRect" index="1"]
custom_fonts/font = SubResource( 2 )

[editable path="ColorRect/MarginContainer/GridContainer/Slot2"]
[editable path="ColorRect/MarginContainer/GridContainer/Slot3"]
[editable path="ColorRect/MarginContainer/GridContainer/Slot4"]
